Update airfoil analysis